Fix social icons position on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -438,11 +438,13 @@ color: #FDDB05;
   grid-row: 1/2;
   justify-content: space-between;
   gap: 10px;
+  justify-self: center;
 
 }
 
 .footer__address {
   grid-row: 4/5;
+  justify-self: center;
 }
 
 }
